Fix some spacing in some of the quest names.  Remove the 'menu' icon from the main menu.  Shorten the manifest short name to be less than 12

--- a/src/assets/styles/application.less
+++ b/src/assets/styles/application.less
@@ -82,8 +82,8 @@
         }
 
         .application-header {
-            .icon-left-open:before, .icon-right-open:before { margin: 0 !important; }
-            .icon-right-open:before { margin-left: 1px !important }
+            .icon-left-open:before { margin-left: 2px !important; margin-right: 0; }
+            .icon-right-open:before { margin-left: 4px !important; margin-right: 0; }
 
             .main-menu {
                 .item {
